--- a/index.html
+++ b/index.html
@@ -224,26 +224,26 @@
     <div class="unit xs-1 s-1 m-1-2 b-1-3">
       <svg class="leaf" xmlns="http://www.w3.org/2000/svg" width="163" height="183" viewBox="0 0 163 183">
         <path class="le0" d="M119.7 128.4l3 10.8-36-4.1s-3.7-.6-3.9 2.2l1.1 40.9h-5.6l1.1-40.9c-.1-2.9-3.9-2.2-3.9-2.2l-36 4.1 3-10.8c.8-3.2-2.2-6-2.2-6L3.7 91.2l7.2-3.4c3.2-1.4 2.4-5.3 2.4-5.3L7 58.1l21.1 4.5c3.5.9 4.5-2.7 4.5-2.7l2.5-9.7 15.8 18.6c3.5 4.7 6.2 3 6.2 3 1.9-.9 1.2-5.4 1.2-5.4L51 25.6l10.8 5.8c4.3 2.2 6.1-1.9 6.1-1.9L81.1 3.3l13.3 26.1s1.8 4.1 6.1 1.9l10.8-5.8-7.3 40.8s-.8 4.5 1.2 5.4c0 0 2.7 1.7 6.2-3L127 50.2l2.5 9.7s1 3.7 4.5 2.7l21.1-4.5-6.3 24.5s-.9 3.8 2.4 5.3l7.2 3.4-36.5 31.2c0-.1-2.9 2.8-2.2 5.9z"/>
-        <circle class="human-1" cx="28" cy="27" r="4.8"/>
-        <path class="human-1" d="M27.5 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L21.6 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.6s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7-.5z"/>
-        <circle class="human-6" cx="29.1" cy="90.8" r="4.8"/>
-        <path class="human-6" d="M28.6 96.8s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V142s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V106s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c-.1-.1-3.6-.7-7.1-.7z"/>
-        <circle class="le1" cx="55.6" cy="27" r="4.8"/>
-        <path class="le1" d="M55.1 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L49.2 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7-.5z"/>
-        <circle class="le1" cx="56.1" cy="91.9" r="4.8"/>
-        <path class="le1" d="M55.5 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c0 0-3.5-.6-7.1-.6z"/>
-        <circle class="le1" cx="82.4" cy="27" r="4.8"/>
-        <path class="le1" d="M81.9 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L76 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c.1 0-3.4-.5-7-.5z"/>
-        <circle class="le2" cx="82.4" cy="91.9" r="4.8"/>
-        <path class="le2" d="M81.9 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.8 34.8s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c.1 0-3.4-.6-7-.6z"/>
-        <circle class="le1" cx="108.4" cy="27" r="4.8"/>
-        <path class="le1" d="M107.9 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L102 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7-.5z"/>
-        <circle class="le1" cx="109" cy="91.9" r="4.8"/>
-        <path class="le1" d="M108.5 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c0 0-3.5-.6-7.1-.6z"/>
-        <circle class="le1" cx="135.4" cy="27" r="4.8"/>
-        <path class="le1" d="M134.8 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L129 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7.1-.5z"/>
-        <circle class="le1" cx="135.4" cy="91.9" r="4.8"/>
-        <path class="le1" d="M134.8 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c0 0-3.5-.6-7.1-.6z"/>
+        <circle class="human human-1" cx="28" cy="27" r="4.8"/>
+        <path class="human human-1" d="M27.5 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L21.6 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.6s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7-.5z"/>
+        <circle class="human human-6" cx="29.1" cy="90.8" r="4.8"/>
+        <path class="human human-6" d="M28.6 96.8s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V142s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V106s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c-.1-.1-3.6-.7-7.1-.7z"/>
+        <circle class="human human-2" cx="55.6" cy="27" r="4.8"/>
+        <path class="human human-2" d="M55.1 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L49.2 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7-.5z"/>
+        <circle class="human human-7" cx="56.1" cy="91.9" r="4.8"/>
+        <path class="human human-7" d="M55.5 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c0 0-3.5-.6-7.1-.6z"/>
+        <circle class="human human-3" cx="82.4" cy="27" r="4.8"/>
+        <path class="human human-3" d="M81.9 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L76 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c.1 0-3.4-.5-7-.5z"/>
+        <circle class="human human-8" cx="82.4" cy="91.9" r="4.8"/>
+        <path class="human human-8" d="M81.9 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.8 34.8s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c.1 0-3.4-.6-7-.6z"/>
+        <circle class="human human-4" cx="108.4" cy="27" r="4.8"/>
+        <path class="human human-4" d="M107.9 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L102 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7-.5z"/>
+        <circle class="human human-9" cx="109" cy="91.9" r="4.8"/>
+        <path class="human human-9" d="M108.5 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c0 0-3.5-.6-7.1-.6z"/>
+        <circle class="human human-5" cx="135.4" cy="27" r="4.8"/>
+        <path class="human human-5" d="M134.8 33.1s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6L129 78s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3v19.8s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V42.1s-.3-1.7 1.1-1.7c0 0 .7.2.7 2V54s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3V40s-.7-5.5-4.5-6.4c0 0-3.5-.5-7.1-.5z"/>
+        <circle class="human human-10" cx="135.4" cy="91.9" r="4.8"/>
+        <path class="human human-10" d="M134.8 97.9s-9.7-1-10.5 4.2l-1.2 17.5s.1 2.6 2 2.6c0 0 2.4-.2 2.3-3l.2-12.4s0-1.5 1.4-1.4c0 0 .8-.3.7 2.6l-.7 34.9s0 3.3 1.6 3.7c0 0 3.3.8 3.3-3.8l.5-19.7s0-2.5 1-2.2c0 0 .9 0 .9 2.3V143s-.3 3.1 1.9 3.1c0 0 2.8.3 2.8-3.3V107s-.3-1.7 1.1-1.7c0 0 .7.2.7 2v11.6s-.4 2.6 1.3 3.3c0 0 2.2.6 2.3-3v-14.3s-.7-5.5-4.5-6.4c0 0-3.5-.6-7.1-.6z"/>
       </svg>
     </div>
     <div class="unit white xs-1 s-1 m-1-2 b-1-3">
@@ -260,6 +260,9 @@
       </svg>
     </div>
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.0.0-beta1.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
